Update to Generic Repository Pattern Engin Demiroğ - Yazılım Geliştirici Yetiştirme Kampı (C# + ANGULAR) Day 8, Homework 1

--- a/ReCapProject.Data.Access.InMemory/ReCapProject.Data.Access.csproj
+++ b/ReCapProject.Data.Access.InMemory/ReCapProject.Data.Access.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ReCapProject.Data.Access.Abstracts\ReCapProject.Data.Access.Abstracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EntityFramework\Migrations\" />
   </ItemGroup>
 
 </Project>
