--- a/ReCapProject.ConsoleApp/ReCapProject.ConsoleApp.csproj
+++ b/ReCapProject.ConsoleApp/ReCapProject.ConsoleApp.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ReCapProject.Business.Abstracts\ReCapProject.Business.Abstracts.csproj" />
     <ProjectReference Include="..\ReCapProject.Business\ReCapProject.Business.csproj" />
     <ProjectReference Include="..\ReCapProject.Data.Access.Abstracts\ReCapProject.Data.Access.Abstracts.csproj" />
