File name rezerve

--- a/ReCapProject.ConsoleApp/ReCapProject.ConsoleApp.csproj
+++ b/ReCapProject.ConsoleApp/ReCapProject.ConsoleApp.csproj
@@ -13,7 +13,7 @@
     <ProjectReference Include="..\ReCapProject.Business.Abstracts\ReCapProject.Business.Abstracts.csproj" />
     <ProjectReference Include="..\ReCapProject.Business\ReCapProject.Business.csproj" />
     <ProjectReference Include="..\ReCapProject.Data.Access.Abstracts\ReCapProject.Data.Access.Abstracts.csproj" />
-    <ProjectReference Include="..\ReCapProject.Data.Access.InMemory\ReCapProject.Data.Access.csproj" />
+    <ProjectReference Include="..\ReCapProject.Data.Access\ReCapProject.Data.Access.csproj" />
     <ProjectReference Include="..\ReCapProject.Data.Entities\ReCapProject.Data.Entities.csproj" />
   </ItemGroup>
 
