--- a/ReCapProject.Business/ReCapProject.Business.csproj
+++ b/ReCapProject.Business/ReCapProject.Business.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReCapProject.Business.Abstracts\ReCapProject.Business.Abstracts.csproj" />
-    <ProjectReference Include="..\ReCapProject.Data.Access.Abstracts\ReCapProject.Data.Access.Abstracts.csproj" />
+    <ProjectReference Include="..\ReCapProject.Data.Access\ReCapProject.Data.Access.csproj" />
+    <ProjectReference Include="..\ReCapProject.Data.Entities\ReCapProject.Data.Entities.csproj" />
   </ItemGroup>
 
 </Project>
