--- a/ReCapProject.WebAPI/appsettings.json
+++ b/ReCapProject.WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.aka.com",
+    "Issuer": "www.aka.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "Aga bu benim sekuriti keyim, yeteri kadar uzun dahasini isteme"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
